recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:7: error: not found: value droit
  droit(angle)
  ^FourSquare:9: error: not found: value droit
  droit(angle)
  ^FourSquare:11: error: not found: value droit
  droit(angle)
  ^