recursion.logo.lessons.recursion.logo.square.FourSquare.scala.code
override def run() {
  
  var angle = 90.0
  

  avance(100)
  droit(angle)
  avance(100)
  droit(angle)
 	avance(100)
  droit(angle)
  avance(100)
  
}